# st-transformers-js

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  README_old.md  add_v_2_streamlit_component_plan.md  build_script.sh  demo_app.py  demo_app_v2.py  example.py  manifest_in.txt  pyproject.toml  pyproject_toml.txt  setup.py  transformers_init.py
.github/workflows/: test.yml
frontend/: index.html
frontend/public/: transformers.min.js
frontend_v2/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend_v2/src/: main.ts  main.tsx
st_transformers_js/: __init__.py  helpers.py  v1.py  v2.py
st_transformers_js/frontend/: package-lock.json  package.json  vite.config.js
st_transformers_js/frontend/public/: index.html
st_transformers_js/frontend/src/: index.html  index.js
st_transformers_js/frontend_v1/: index.html
tests/: test_component.py  test_v1_component.py  test_v2_component.py
