[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st-transformers-js"
dynamic = ["version"]
description = "Offline Streamlit component for Hugging Face Transformers.js"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["streamlit", "transformers", "machine-learning", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Streamlit",
]
dependencies = [
    "streamlit>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/st-transformers-js"
Documentation = "https://github.com/yourusername/st-transformers-js#readme"

[project.optional-dependencies]
mime-detection = ["python-magic>=0.4.0"]
Repository = "https://github.com/yourusername/st-transformers-js"
"Bug Tracker" = "https://github.com/yourusername/st-transformers-js/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["st_transformers_js*"]

[tool.setuptools.package-data]
"st_transformers_js" = ["frontend_v1/**", "frontend_v2/dist/**"]

[tool.streamlit.components.st_transformers_js_v2]
asset_dir = "st_transformers_js/frontend_v2/dist"
